src/main/java/com/cheng/cbc/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package com.cheng.cbc.parser;

import com.cheng.cbc.ast.*;
import com.cheng.cbc.ast.ExprNode.*;
import com.cheng.cbc.ast.ExprNode.AssignNode.AssignNode;
import com.cheng.cbc.ast.ExprNode.AssignNode.OpAssignNode;
import com.cheng.cbc.ast.ExprNode.LHSNode.*;
import com.cheng.cbc.ast.ExprNode.LiteralNode.IntegerLiteralNode;
import com.cheng.cbc.ast.ExprNode.LiteralNode.StringLiteralNode;
import com.cheng.cbc.ast.ExprNode.UnaryOpNode.PrefixOpNode;
import com.cheng.cbc.ast.ExprNode.UnaryOpNode.SuffixOpNode;
import com.cheng.cbc.ast.ExprNode.UnaryOpNode.UnaryOpNode;
import com.cheng.cbc.ast.StmtNode.*;
import com.cheng.cbc.entity.DefinedFunction;
import com.cheng.cbc.entity.DefinedVariable;
import com.cheng.cbc.entity.Parameter;
import com.cheng.cbc.entity.Params;
import com.cheng.cbc.type.*;
import com.cheng.cbc.utils.TextUtils;

import java.io.Reader;
import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;


public class Parser implements ParserConstants {
    static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private int[] jj_la1_2;

    static {
        jj_la1_init_0();
        jj_la1_init_1();
        jj_la1_init_2();
    }

    final private int[] jj_la1 = new int[40];
    final private JJCalls[] jj_2_rtns = new JJCalls[15];
    /**
     * Generated Token Manager.
     */
    public ParserTokenManager token_source;
    /**
     * Current token.
     */
    public Token token;
    /**
     * Next token.
     */
    public Token jj_nt;
    SimpleCharStream jj_input_stream;
    private String source;
    private Set<String> knownTypes;
    private int jj_ntk;
    private Token jj_scanpos, jj_lastpos;
    private int jj_la;
    /**
     * Whether we are looking ahead.
     */
    private boolean jj_lookingAhead = false;
    private boolean jj_semLA;
    private int jj_gen;
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;
    private boolean trace_enabled;

    public Parser(Reader reader, String source) {
        this(reader);
        this.source = source;
        knownTypes = new HashSet<>();
    }

    /**
     * Constructor with InputStream.
     */
    public Parser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public Parser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new ParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 40; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public Parser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new ParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 40; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public Parser(ParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 40; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[]{0xf80, 0x4040, 0x0, 0x0, 0x86000000, 0x0, 0x86200000, 0x0, 0x0, 0x0, 0x86200000, 0x86200000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x86200000, 0x20000, 0x86200000, 0x86200000, 0x86200000, 0x87f50000, 0x87f50000, 0x2000, 0x0, 0x0, 0x0, 0x0, 0xc000,};
    }

    private static void jj_la1_init_1() {
        jj_la1_1 = new int[]{0x0, 0x0, 0xa0, 0xa0, 0x810, 0x2000, 0x7cc890, 0x3c820, 0x3c820, 0x7cc080, 0x810, 0x7cc890, 0x1800080, 0x1800080, 0xc0000, 0xc0000, 0x6000000, 0x6000000, 0x400000, 0x8000000, 0x10000000, 0xe0000000, 0xe0000000, 0x0, 0x0, 0x0, 0x0, 0x7cc890, 0x0, 0x7cc890, 0x7cc890, 0x7cc890, 0x7cca90, 0x7cca90, 0x0, 0x0, 0x2000, 0x0, 0x2000, 0x0,};
    }

    private static void jj_la1_init_2() {
        jj_la1_2 = new int[]{0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x7, 0x7, 0x8, 0x10, 0x20, 0x1ff80, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x20000, 0x0, 0x20000, 0x0, 0x0,};
    }

    public Location location(Token token) {
        return new Location(source, token);
    }

    public void addType(String name) {
        knownTypes.add(name);
    }

    public boolean isType(String name) {
        return knownTypes.contains(name);
    }

    final public String name() throws ParseException {
        Token name;
        name = jj_consume_token(IDENTIFIER);
        {
            if ("" != null) return name.image;
        }
        throw new Error("Missing return statement in function");
    }

    final public TypeRef typebase() throws ParseException {
        Token t, name;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case VOID: {
                t = jj_consume_token(VOID);
                {
                    if ("" != null) return new VoidTypeRef(location(t));
                }
                break;
            }
            case CHAR: {
                t = jj_consume_token(CHAR);
                {
                    if ("" != null) return IntegerTypeRef.charRef(location(t));
                }
                break;
            }
            case SHORT: {
                t = jj_consume_token(SHORT);
                {
                    if ("" != null) return IntegerTypeRef.shortRef(location(t));
                }
                break;
            }
            case INT: {
                t = jj_consume_token(INT);
                {
                    if ("" != null) return IntegerTypeRef.intRef(location(t));
                }
                break;
            }
            case LONG: {
                t = jj_consume_token(LONG);
                {
                    if ("" != null) return IntegerTypeRef.longRef(location(t));
                }
                break;
            }
            default:
                jj_la1[0] = jj_gen;
                if (jj_2_1(2)) {
                    t = jj_consume_token(UNSIGNED);
                    jj_consume_token(CHAR);
                    {
                        if ("" != null) return IntegerTypeRef.ucharRef(location(t));
                    }
                } else if (jj_2_2(2)) {
                    t = jj_consume_token(UNSIGNED);
                    jj_consume_token(SHORT);
                    {
                        if ("" != null) return IntegerTypeRef.ushortRef(location(t));
                    }
                } else if (jj_2_3(2)) {
                    t = jj_consume_token(UNSIGNED);
                    jj_consume_token(INT);
                    {
                        if ("" != null) return IntegerTypeRef.uintRef(location(t));
                    }
                } else {
                    switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                        case UNSIGNED: {
                            t = jj_consume_token(UNSIGNED);
                            jj_consume_token(LONG);
                            {
                                if ("" != null) return IntegerTypeRef.ulongRef(location(t));
                            }
                            break;
                        }
                        case STRUCT: {
                            t = jj_consume_token(STRUCT);
                            name = jj_consume_token(IDENTIFIER);
                            {
                                if ("" != null) return new StructTypeRef(location(t), name.image);
                            }
                            break;
                        }
                        default:
                            jj_la1[1] = jj_gen;
                            if (isType(getToken(1).image)) {
                                name = jj_consume_token(IDENTIFIER);
                                {
                                    if ("" != null) return new UserTypeRef(location(name), name.image);
                                }
                            } else {
                                jj_consume_token(-1);
                                throw new ParseException();
                            }
                    }
                }
        }
        throw new Error("Missing return statement in function");
    }

    final public TypeRef typeref() throws ParseException {
        TypeRef ref;
        Token t;
        ref = typebase();
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case 37:
                case 39: {
                    ;
                    break;
                }
                default:
                    jj_la1[2] = jj_gen;
                    break label_1;
            }
            if (jj_2_4(2)) {
                jj_consume_token(37);
                jj_consume_token(38);
                ref = new ArrayTypeRef(ref);
            } else {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case 37: {
                        jj_consume_token(37);
                        t = jj_consume_token(INTEGER);
                        jj_consume_token(38);
                        long i = TextUtils.getLong(t.image);
                        ref = new ArrayTypeRef(ref, i);
                        break;
                    }
                    case 39: {
                        jj_consume_token(39);
                        ref = new PointerTypeRef(ref);
                        break;
                    }
                    default:
                        jj_la1[3] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
            }
        }
        {
            if ("" != null) return ref;
        }
        throw new Error("Missing return statement in function");
    }

    final public TypeNode type() throws ParseException {
        TypeRef ref;
        ref = typeref();
        {
            if ("" != null) return new TypeNode(ref);
        }
        throw new Error("Missing return statement in function");
    }

    final public Slot slot() throws ParseException {
        TypeNode type;
        String name;
        type = type();
        name = name();
        jj_consume_token(40);
        {
            if ("" != null) return new Slot(type, name);
        }
        throw new Error("Missing return statement in function");
    }

    final public List<Slot> memberList() throws ParseException {
        List<Slot> members = new ArrayList<>();
        Slot slot;
        jj_consume_token(41);
        label_2:
        while (true) {
            if (jj_2_5(1)) {
                ;
            } else {
                break label_2;
            }
            slot = slot();
            members.add(slot);
        }
        jj_consume_token(42);
        {
            if ("" != null) return members;
        }
        throw new Error("Missing return statement in function");
    }

    final public StructNode defstruct() throws ParseException {
        List<Slot> members;
        String name;
        Token t;
        t = jj_consume_token(STRUCT);
        name = name();
        members = memberList();
        jj_consume_token(40);
        {
            if ("" != null) return new StructNode(location(t), name, members);
        }
        throw new Error("Missing return statement in function");
    }

    final public ExprNode primary() throws ParseException {
        Token t;
        ExprNode n;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case INTEGER: {
                t = jj_consume_token(INTEGER);
                {
                    if ("" != null) return IntegerLiteralNode.intLiteralNode(location(t), TextUtils.getLong(t.image));
                }
                break;
            }
            case STRING: {
                t = jj_consume_token(STRING);
                {
                    if ("" != null)
                        return StringLiteralNode.stringLiteralNode(location(t), TextUtils.getStringReal(t.image));
                }
                break;
            }
            case CHARACTER: {
                t = jj_consume_token(CHARACTER);
                {
                    if ("" != null) return IntegerLiteralNode.charLiteralNode(location(t), TextUtils.getChar(t.image));
                }
                break;
            }
            case IDENTIFIER: {
                t = jj_consume_token(IDENTIFIER);
                {
                    if ("" != null) return new VariableNode(location(t), t.image);
                }
                break;
            }
            case 43: {
                jj_consume_token(43);
                n = expr();
                jj_consume_token(44);
                {
                    if ("" != null) return n;
                }
                break;
            }
            default:
                jj_la1[4] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    final public List<ExprNode> args() throws ParseException {
        ExprNode expr;
        List<ExprNode> exprs = new ArrayList<>();
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case SIZEOF:
            case INTEGER:
            case IDENTIFIER:
            case STRING:
            case CHARACTER:
            case 39:
            case 43:
            case 46:
            case 47:
            case 50:
            case 51:
            case 52:
            case 53:
            case 54: {
                expr = expr();
                exprs.add(expr);
                label_3:
                while (true) {
                    switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                        case 45: {
                            ;
                            break;
                        }
                        default:
                            jj_la1[5] = jj_gen;
                            break label_3;
                    }
                    jj_consume_token(45);
                    expr = expr();
                    exprs.add(expr);
                }
                break;
            }
            default:
                jj_la1[6] = jj_gen;
                ;
        }
        {
            if ("" != null) return exprs;
        }
        throw new Error("Missing return statement in function");
    }

    final public ExprNode postfix() throws ParseException {
        ExprNode expr, idx;
        String memb;
        List<ExprNode> args;
        expr = primary();
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case 37:
                case 43:
                case 46:
                case 47:
                case 48:
                case 49: {
                    ;
                    break;
                }
                default:
                    jj_la1[7] = jj_gen;
                    break label_4;
            }
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case 46: {
                    jj_consume_token(46);
                    expr = new SuffixOpNode("++", expr);
                    break;
                }
                case 47: {
                    jj_consume_token(47);
                    expr = new SuffixOpNode("--", expr);
                    break;
                }
                case 37: {
                    jj_consume_token(37);
                    idx = expr();
                    jj_consume_token(38);
                    expr = new ArefNode(expr, idx);
                    break;
                }
                case 48: {
                    jj_consume_token(48);
                    memb = name();
                    expr = new MemberNode(expr, memb);
                    break;
                }
                case 49: {
                    jj_consume_token(49);
                    memb = name();
                    expr = new PtrMemberNode(expr, memb);
                    break;
                }
                case 43: {
                    jj_consume_token(43);
                    args = args();
                    jj_consume_token(44);
                    expr = new FuncallNode(expr, args);
                    break;
                }
                default:
                    jj_la1[8] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if ("" != null) return expr;
        }
        throw new Error("Missing return statement in function");
    }

    final public ExprNode unary() throws ParseException {
        ExprNode n;
        TypeNode t;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case 46: {
                jj_consume_token(46);
                n = unary();
                {
                    if ("" != null) return new PrefixOpNode("++", n);
                }
                break;
            }
            case 47: {
                jj_consume_token(47);
                n = unary();
                {
                    if ("" != null) return new PrefixOpNode("--", n);
                }
                break;
            }
            case 50: {
                jj_consume_token(50);
                n = unary();
                {
                    if ("" != null) return new UnaryOpNode("+", n);
                }
                break;
            }
            case 51: {
                jj_consume_token(51);
                n = unary();
                {
                    if ("" != null) return new UnaryOpNode("-", n);
                }
                break;
            }
            case 52: {
                jj_consume_token(52);
                n = unary();
                {
                    if ("" != null) return new UnaryOpNode("!", n);
                }
                break;
            }
            case 53: {
                jj_consume_token(53);
                n = unary();
                {
                    if ("" != null) return new UnaryOpNode("~", n);
                }
                break;
            }
            case 39: {
                jj_consume_token(39);
                n = unary();
                {
                    if ("" != null) return new DereferenceNode(n);
                }
                break;
            }
            case 54: {
                jj_consume_token(54);
                n = unary();
                {
                    if ("" != null) return new AddressNode(n);
                }
                break;
            }
            default:
                jj_la1[9] = jj_gen;
                if (jj_2_6(3)) {
                    jj_consume_token(SIZEOF);
                    jj_consume_token(43);
                    t = type();
                    jj_consume_token(44);
                    {
                        if ("" != null) return new SizeofTypeNode(t);
                    }
                } else {
                    switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                        case SIZEOF: {
                            jj_consume_token(SIZEOF);
                            n = unary();
                            {
                                if ("" != null) return new SizeofExprNode(n);
                            }
                            break;
                        }
                        case INTEGER:
                        case IDENTIFIER:
                        case STRING:
                        case CHARACTER:
                        case 43: {
                            n = postfix();
                            {
                                if ("" != null) return n;
                            }
                            break;
                        }
                        default:
                            jj_la1[10] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                }
        }
        throw new Error("Missing return statement in function");
    }
